--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="bundles.html">Bundles</a>
         <a href="aboutus.html">About Us</a>
         <div class="dropdown">
