--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
             <a href="hockey.html">Hockey</a>
           </div>
         </div> <div class="search-container">
-          <form action="/action_page.php">
+          <form action="https://www.youtube.com">
             <input type="text" placeholder="Search.." name="search">
             <button class="beanbutton" type="submit"><img src="../icons/magnifying-glass.png"
               height="" width="20px"/>
