--- a/baseball.html
+++ b/baseball.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="bundles.html">Bundles</a>
         <a href="aboutus.html">About Us</a>
         <div class="dropdown">
@@ -25,7 +25,7 @@
             <a href="hockey.html">Hockey</a>
           </div>
         </div> <div class="search-container">
-          <form action="/action_page.php">
+          <form action="https://www.youtube.com">
             <input type="text" placeholder="Search.." name="search">
             <button class="beanbutton" type="submit"><img src="../icons/magnifying-glass.png"
               height="" width="20px"/>
