--- a/soccer.html
+++ b/soccer.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="bundles.html">Bundles</a>
         <a href="aboutus.html">About Us</a>
         <div class="dropdown">
@@ -24,7 +24,7 @@
             <a href="hockey.html">Hockey</a>
           </div>
         </div> <div class="search-container">
-          <form action="/action_page.php">
+          <form action="https://www.youtube.com">
             <input type="text" placeholder="Search.." name="search">
             <button class="beanbutton"type="submit">
               <img src="../icons/magnifying-glass.png"
